# FindVerse

./: .dockerignore  .env.example  .gitignore  Cargo.docker.toml  Cargo.toml  README.md  README.zh-CN.md  docker-compose.podman.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json
.github/workflows/: _validate.yml  ci.yml  crawler-dev-artifact.yml  release.yml
apps/web/: Dockerfile  index.html  next.config.ts  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/auth/local-login/: route.ts
apps/web/app/api/auth/signout/: route.ts
apps/web/app/api/developer/crawl/overview/: route.ts
apps/web/app/api/developer/crawlers/: route.ts
apps/web/app/api/developer/frontier/seed/: route.ts
apps/web/app/api/developer/keys/: route.ts
apps/web/app/api/developer/keys/[id]/: route.ts
apps/web/app/api/developer/usage/: route.ts
apps/web/app/developers/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/search/: page.tsx
apps/web/components/: developer-portal.tsx  local-login-form.tsx  result-card.tsx  search-form.tsx
apps/web/lib/: api.ts  request-origin.ts  session.ts
apps/web/public/: smoke-crawler.html
apps/web/src/: api.ts  app.tsx  index.css  main.tsx  styles.css  tailwind.css
apps/web/src/api/: admin.ts  auth.ts  client.ts  crawler.ts  developer.ts  documents.ts  jobs.ts  search.ts  system.ts  types.ts
apps/web/src/components/: ConsolePage.tsx  DevPortal.tsx  JoinKeyManager.tsx  LanguageSwitcher.tsx  SearchPage.tsx  ThemeSwitcher.tsx
apps/web/src/components/common/: AppSelect.tsx  AppTopbar.tsx  PanelPrimitives.tsx
apps/web/src/components/console/: ConsoleContext.tsx  ConsoleCrawlTasks.tsx  ConsoleDocuments.tsx  ConsoleDomains.tsx  ConsoleJobs.tsx  ConsoleOverview.tsx  ConsoleSettings.tsx  ConsoleUsers.tsx  ConsoleWorkers.tsx  consoleLabels.ts  useConsoleData.ts  useConsoleSession.ts
apps/web/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sidebar.tsx  switch.tsx  textarea.tsx
apps/web/src/i18n/: index.ts
apps/web/src/i18n/locales/en/: translation.json
apps/web/src/i18n/locales/zh-CN/: translation.json
config/: seeds.example.yaml
config/production/: empty-dev-auth-store.json
crates/findverse-common/: Cargo.toml
crates/findverse-common/src/: lib.rs
docs/: architecture.md  deployment.md
openapi/: search-api.yaml
scripts/: crawler-setup.ps1  crawler-setup.sh  deploy-prod.sh  deploy-stack.ps1  deploy-stack.sh  e2e-podman.ps1  install-crawler.sh  smoke-test.ps1  smoke-test.sh
services/: control-plane.Dockerfile
services/api/: Cargo.toml  Dockerfile
services/api/fixtures/: bootstrap_documents.json  crawler_store.json  dev_auth_store.json  developer_store.json
services/api/migrations/: 0001_initial.sql  0002_crawler_schema_update.sql  0003_search_enhancement.sql  0004_search_architecture.sql  0005_remove_qps_limit.sql  0006_pipeline_metadata.sql  0007_recursive_scope_and_llm_filter.sql  0008_tor_and_network.sql  0009_crawl_page_budget.sql  0010_link_graph_and_domain_stats.sql  0011_conditional_request_headers.sql  0012_crawl_origins_scheduler.sql  0013_same_origin_concurrency.sql  0014_drop_legacy_crawler_join.sql  0015_crawl_job_render_mode.sql  0016_crawl_job_requires_js.sql  0017_crawl_ingest_pipeline.sql  0018_crawl_result_blob_storage.sql  0019_documents_text_blob_key.sql  0020_drop_unused_crawl_claim_columns.sql  0021_crawl_result_payload_default.sql  0022_crawl_job_site_profile_id.sql  0023_cleanup_owner_user_id.sql
services/api/site_rules/: README.md
services/api/site_rules/platform-presets/: bitbucket.toml  bookstack.toml  confluence.toml  discourse.toml  docsify.toml  docusaurus.toml  drupal.toml  flarum.toml  forgejo.toml  ghost.toml  gitbook.toml  gitea.toml  gitee.toml  gitlab.toml  hexo.toml  hugo.toml  jekyll.toml  jira.toml  mdbook.toml  mediawiki.toml  mkdocs.toml  nextra.toml  notion.toml  sphinx.toml  typecho.toml  vitepress.toml  vuepress.toml  wikijs.toml  wordpress.toml
services/api/site_rules/sites/: github.toml  readthedocs.toml
services/api/src/: admin.rs  auth_support.rs  blob_store.rs  config.rs  crawler.rs  db.rs  dev_auth.rs  error.rs  indexing.rs  lib.rs  main.rs  migration.rs  models.rs  ranking.rs  rate_limit.rs  routes.rs  runtime.rs  site_rules.rs  startup.rs  state.rs  store.rs  task_bus.rs
services/api/src/crawl/: frontier.rs  ingest.rs  mod.rs  projection.rs
services/api/src/handlers/: admin.rs  crawler.rs  developer.rs  mod.rs  search.rs  task.rs
services/api/src/quality/: mod.rs  spam_detector.rs
services/api/src/query/: mod.rs  pipeline.rs  spell_check.rs
services/api/src/store/: developer.rs  mod.rs  search.rs
services/blob-storage/: Cargo.toml  Dockerfile
services/blob-storage/src/: main.rs
services/bootstrap/: Cargo.toml  Dockerfile
services/bootstrap/src/: main.rs
services/control-api/: Cargo.toml  Dockerfile
services/control-api/src/: main.rs
services/crawler/: Cargo.toml  Dockerfile
services/crawler/src/: discover.rs  extract.rs  fetch.rs  js_render.rs  llm_filter.rs  main.rs  models.rs  sitemap.rs  url_normalize.rs  worker.rs
services/crawler/src/site_profile/: loader.rs  mod.rs  rules.rs
services/projector/: Cargo.toml  Dockerfile
services/projector/src/: main.rs
services/query-api/: Cargo.toml  Dockerfile
services/query-api/src/: main.rs
services/scheduler/: Cargo.toml  Dockerfile
services/scheduler/src/: main.rs
services/task-api/: Cargo.toml  Dockerfile
services/task-api/src/: main.rs
tests/e2e/: findverse.spec.ts
