[workspace]
members = [
  "crates/findverse-common",
  "services/api",
  "services/control-api",
  "services/query-api",
  "services/crawler",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.23", default-features = false, features = ["brotli", "charset", "gzip", "http2", "json", "rustls-tls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
