[workspace]
members = [
  "crates/findverse-common",
  "services/api",
  "services/bootstrap",
  "services/blob-storage",
  "services/control-api",
  "services/projector",
  "services/query-api",
  "services/task-api",
  "services/scheduler",
  "services/crawler",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.22"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["json", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ego-tree = "0.11.0"
rand = "0.10.1"
redis = { version = "1.2.0", features = ["tokio-comp"] }
reqwest = { version = "0.13.3", default-features = false, features = ["brotli", "charset", "gzip", "http2", "json", "rustls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["serde", "v7"] }
