[package]
name = "findverse-crawler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
findverse-common = { path = "../../crates/findverse-common" }
futures = "0.3"
headless_chrome = { version = "1.0", optional = true }
hostname = "0.4"
rand.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
texting_robots = "0.2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
whatlang = "0.16"

[features]
default = []
js-render = ["headless_chrome"]
