[package]
name = "findverse-crawler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ego-tree.workspace = true
findverse-common = { path = "../../crates/findverse-common" }
flate2 = "1"
futures = "0.3.32"
headless_chrome = { version = "1.0.21", optional = true }
hostname = "0.4.2"
quick-xml = "0.39"
rand.workspace = true
reqwest = { workspace = true, features = ["cookies", "socks"] }
regex = "1.11.1"
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar = "0.4"
texting_robots = "0.2.2"
toml = "0.8.19"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
whatlang = "0.18.0"

[features]
default = ["js-render"]
js-render = ["headless_chrome"]
